--- a/source/Application/Views/_ViewImports.cshtml
+++ b/source/Application/Views/_ViewImports.cshtml
@@ -1,1 +1,4 @@
-﻿@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+﻿@using Application.Common.Services
+@using Data.Common.Enums
+@using Data.Models
+@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
