--- a/source/Application/Views/Home/index.cshtml
+++ b/source/Application/Views/Home/index.cshtml
@@ -1,3 +1,18 @@
-﻿@{ }
+﻿@model IEnumerable<Log>
+@{ }
 
-<h1 class="text-blue-600">Home Page</h1>
+@if(Model.Count() == 0)
+{
+    <article>
+        <div class="article-preview">No logs at this time.</div>
+    </article>
+}
+
+@foreach (Log log in Model.OrderByDescending(l => l.CreatedDate).Take(10))
+{
+    <article>
+        <h1>@log.Title</h1>
+        <h2>@log.CreatedDate.Encode()</h2>
+        <div class="article-preview">@log.Body.Substring(0, 1000)</div>
+    </article>
+}
