--- a/source/Application/wwwroot/css/main.css
+++ b/source/Application/wwwroot/css/main.css
@@ -1,3 +1,94 @@
-﻿@tailwind base;
-@tailwind components;
-@tailwind utilities;
+﻿@import url("https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,400;0,700;1,400&display=swap");
+*, html {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box; }
+
+body {
+  margin: 0;
+  padding: 0;
+  width: 100vw;
+  box-sizing: border-box;
+  background-color: #454545;
+  font-size: 16px;
+  overflow: hidden; }
+
+.page {
+  margin: 0 auto;
+  padding: 1.25rem 0 0 0;
+  background-color: #000;
+  width: clamp(700px, 70vw, 1344px);
+  height: 100vh; }
+
+header {
+  width: 100%;
+  height: 3.75rem;
+  background-color: #838996; }
+  header h1 {
+    float: right;
+    margin-right: 2.5rem;
+    font-size: 3.75rem;
+    line-height: 3.75rem;
+    font-family: 'Roboto Condensed', sans-serif;
+    text-transform: uppercase; }
+
+main {
+  width: 100%;
+  height: 100%;
+  padding-top: 2.5rem;
+  display: flex;
+  flex-direction: row; }
+  main nav {
+    width: 25%; }
+    main nav a {
+      display: block;
+      width: clamp(14ch, 80%, 24ch);
+      height: clamp(1rem, 4vh, 3.5rem);
+      margin: 0 auto 1.25rem auto;
+      font-size: clamp(1.5rem, 3ch, 3.5rem);
+      font-family: 'Roboto Condensed', sans-serif;
+      font-weight: bold;
+      line-height: clamp(1rem, 4vh, 3.5rem);
+      color: #000;
+      text-decoration: none;
+      text-transform: uppercase;
+      text-align: center;
+      background-color: #838996;
+      border-radius: 1.875rem; }
+      main nav a:hover {
+        background-color: #ffb300; }
+    main nav #authorization {
+      margin-top: 5rem; }
+  main .content {
+    width: 75%;
+    height: 100%;
+    font-family: 'Roboto Condensed', sans-serif;
+    color: #3d99f5;
+    overflow-y: auto; }
+    main .content article {
+      width: 90%;
+      margin: 0 auto 2.5rem auto; }
+      main .content article h1 {
+        font-size: 2.5rem;
+        font-weight: bold;
+        line-height: 3.75rem; }
+      main .content article h2 {
+        font-size: 1.75rem;
+        font-style: italic;
+        line-height: 2.5rem; }
+      main .content article .article-preview {
+        font-size: 1.25rem;
+        line-height: 2rem; }
+
+::-webkit-scrollbar {
+  width: 10px; }
+
+::-webkit-scrollbar-track {
+  background-color: #838996;
+  border-color: #000000;
+  border-width: 0px 4px 0px 4px;
+  border-style: solid; }
+
+::-webkit-scrollbar-thumb {
+  background-color: #3d99f5;
+  border-radius: 5px; }
