--- a/source/Application/Views/Shared/_Layout.cshtml
+++ b/source/Application/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewBag.Title</title>
+    <title>@ViewBag.PageTitle</title>
     <meta name="author" content="Forrest, James" />
     <link rel="stylesheet" href="/css/main.min.css" />
 </head>
@@ -11,14 +11,14 @@
     <div class="page">
         <header>
             @RenderSection("filter", false)
-            <h1>@ViewBag.Title</h1>
+            <h1>@ViewBag.PageTitle</h1>
         </header>
         <main>
             <nav>
                 <div class="nav-section" id="log-types">
                 @foreach(LogType logType in Enum.GetValues(typeof(LogType)))
                 {
-                    <a href="#">@logType.ToString()</a>
+                    <a href="/@logType.ToString().ToLower()">@logType.ToString()</a>
                 }
                 </div>
                 <div class="nav-section" id="authorization">
