--- a/source/Application/wwwroot/css/main.scss
+++ b/source/Application/wwwroot/css/main.scss
@@ -90,6 +90,14 @@ main {
         article {
             width: 90%;
             margin: 0 auto 2.5rem auto;
+            
+            a {
+                text-decoration: none;
+
+                &:hover {
+                    color: $accent-color-200;
+                }
+            }
 
             h1 {
                 font-size: 2.5rem;
@@ -104,8 +112,8 @@ main {
             }
 
             .article-preview {
-                font-size: 1.25rem;
-                line-height: 2rem;
+                font-size: 1.5rem;
+                line-height: 2.5rem;
             }
         }
     }
