--- a/source/Application/Views/Shared/_Layout.cshtml
+++ b/source/Application/Views/Shared/_Layout.cshtml
@@ -22,9 +22,18 @@
                 }
                 </div>
                 <div class="nav-section" id="authorization">
-                    <a href="#">Log In</a>
-                    <a href="#">Create Post</a>
-                    <a href="#">Log Out</a>
+                    @if (User.Identity.IsAuthenticated)
+                    {
+                        if (User.IsInRole("Admin"))
+                        {
+                            <a href="#">Create Post</a>
+                        }
+                        <a asp-controller="home" asp-action="logout">Log Out</a>
+                    }
+                    else
+                    {
+                        <a asp-controller="home" asp-action="login">Log In</a>
+                    }
                 </div>
             </nav>
             <section class="content">
