--- a/source/Application/Views/_ViewImports.cshtml
+++ b/source/Application/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using Application.Common.Services
+@using Application.ViewModels
 @using Data.Common.Enums
 @using Data.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
