--- a/source/Application/wwwroot/css/main.css
+++ b/source/Application/wwwroot/css/main.css
@@ -83,6 +83,46 @@ main {
       main .content article .article-preview {
         font-size: 1.5rem;
         line-height: 2.5rem; }
+    main .content #loginForm {
+      width: 50%;
+      margin: 5rem auto;
+      padding: 2rem;
+      border: 2px solid #838996;
+      border-radius: 5px; }
+      main .content #loginForm .form-group {
+        display: flex;
+        flex-direction: column;
+        margin-bottom: 1.5rem; }
+        main .content #loginForm .form-group label {
+          font-size: 2rem;
+          padding-left: 1rem;
+          margin-bottom: 0.5rem; }
+        main .content #loginForm .form-group input {
+          font-size: 1.5rem;
+          line-height: 2rem;
+          padding: 0.25rem 1rem;
+          border: 5px solid transparent;
+          border-radius: 1.5rem; }
+          main .content #loginForm .form-group input:focus {
+            outline: none;
+            border: 5px solid #3d99f5; }
+      main .content #loginForm input[type=submit] {
+        display: block;
+        width: 50%;
+        height: 2.5rem;
+        margin: 0 auto;
+        font-size: 1.5rem;
+        font-family: 'Roboto Condensed', sans-serif;
+        font-weight: bold;
+        line-height: 2.5rem;
+        background-color: #838996;
+        text-transform: uppercase;
+        border: none;
+        border-radius: 1.25rem;
+        text-decoration: none;
+        cursor: pointer; }
+        main .content #loginForm input[type=submit]:hover {
+          background-color: #ffb300; }
 
 ::-webkit-scrollbar {
   width: 10px; }
