--- a/source/Application/wwwroot/css/main.scss
+++ b/source/Application/wwwroot/css/main.scss
@@ -90,7 +90,7 @@ main {
         article {
             width: 90%;
             margin: 0 auto 2.5rem auto;
-            
+
             a {
                 text-decoration: none;
 
@@ -114,6 +114,60 @@ main {
             .article-preview {
                 font-size: 1.5rem;
                 line-height: 2.5rem;
+            }
+        }
+
+        #loginForm {
+            width: 50%;
+            margin: 5rem auto;
+            padding: 2rem;
+            border: 2px solid $accent-color-100;
+            border-radius: 5px;
+
+            .form-group {
+                display: flex;
+                flex-direction: column;
+                margin-bottom: 1.5rem;
+
+                label {
+                    font-size: 2rem;
+                    padding-left: 1rem;
+                    margin-bottom: 0.5rem;
+                }
+
+                input {
+                    font-size: 1.5rem;
+                    line-height: 2rem;
+                    padding: 0.25rem 1rem;
+                    border: 5px solid transparent;
+                    border-radius: 1.5rem;
+
+                    &:focus {
+                        outline: none;
+                        border: 5px solid $primary-color;
+                    }
+                }
+            }
+
+            input[type=submit] {
+                display: block;
+                width: 50%;
+                height: 2.5rem;
+                margin: 0 auto;
+                font-size: 1.5rem;
+                font-family: 'Roboto Condensed', sans-serif;
+                font-weight: bold;
+                line-height: 2.5rem;
+                background-color: $accent-color-100;
+                text-transform: uppercase;
+                border: none;
+                border-radius: 1.25rem;
+                text-decoration: none;
+                cursor: pointer;
+
+                &:hover {
+                    background-color: $accent-color-200;
+                }
             }
         }
     }
