Added Create and View actions for log

--- a/source/Application/Views/Home/index.cshtml
+++ b/source/Application/Views/Home/index.cshtml
@@ -11,8 +11,17 @@
 @foreach (Log log in Model.OrderByDescending(l => l.CreatedDate).Take(10))
 {
     <article>
-        <h1><a href="#">@log.Title</a></h1>
+        <h1><a href="/@log.EncodedTitle">@log.Title</a></h1>
         <h2>@log.CreatedDate.Encode()</h2>
-        <div class="article-preview">@log.Body.Substring(0, 1000)</div>
+        <div class="article-preview">
+            @if (log.Body.Length >= 1000)
+            {
+                @MarkdownService.ParseHtml(log.Body.Substring(0, 1000));
+            }
+            else
+            {
+                @MarkdownService.ParseHtml(log.Body);
+            }
+        </div>
     </article>
 }
