--- a/source/Application/wwwroot/css/main.scss
+++ b/source/Application/wwwroot/css/main.scss
@@ -82,10 +82,11 @@ main {
 
     .content {
         width: 75%;
-        height: 100%;
         font-family: 'Roboto Condensed', sans-serif;
         color: $primary-color;
         overflow-y: auto;
+        padding-bottom: 2.5rem;
+        margin-bottom: 2.5rem;
 
         article {
             width: 90%;
@@ -93,6 +94,11 @@ main {
 
             a {
                 text-decoration: none;
+                color: $primary-color;
+
+                &:visited {
+                    color: $primary-color;
+                }
 
                 &:hover {
                     color: $accent-color-200;
@@ -114,20 +120,25 @@ main {
             .article-preview {
                 font-size: 1.5rem;
                 line-height: 2.5rem;
+
+                li {
+                    padding-left: 1.25rem;
+                    list-style-position: inside;
+                }
             }
         }
 
         #loginForm {
-            width: 50%;
+            width: 80%;
             margin: 5rem auto;
-            padding: 2rem;
+            padding: 5rem;
             border: 2px solid $accent-color-100;
             border-radius: 5px;
 
             .form-group {
                 display: flex;
                 flex-direction: column;
-                margin-bottom: 1.5rem;
+                margin-bottom: 2.5rem;
 
                 label {
                     font-size: 2rem;
@@ -141,6 +152,73 @@ main {
                     padding: 0.25rem 1rem;
                     border: 5px solid transparent;
                     border-radius: 1.5rem;
+
+                    &:focus {
+                        outline: none;
+                        border: 5px solid $primary-color;
+                    }
+                }
+            }
+
+            input[type=submit] {
+                display: block;
+                width: 50%;
+                height: 2.5rem;
+                margin: 0 auto;
+                font-size: 1.5rem;
+                font-family: 'Roboto Condensed', sans-serif;
+                font-weight: bold;
+                line-height: 2.5rem;
+                background-color: $accent-color-100;
+                text-transform: uppercase;
+                border: none;
+                border-radius: 1.25rem;
+                text-decoration: none;
+                cursor: pointer;
+
+                &:hover {
+                    background-color: $accent-color-200;
+                }
+            }
+        }
+
+        #createLog {
+            width: 80%;
+            margin: 0 auto;
+
+            .form-group {
+                display: flex;
+                flex-direction: column;
+                margin-bottom: 2.5rem;
+
+                label {
+                    font-size: 2rem;
+                    padding-left: 1rem;
+                    margin-bottom: 0.5rem;
+                }
+
+                input, select {
+                    font-size: 1.5rem;
+                    line-height: 2rem;
+                    padding: 0.25rem 1rem;
+                    border: 5px solid transparent;
+                    border-radius: 1.5rem;
+
+                    &:focus {
+                        outline: none;
+                        border: 5px solid $primary-color;
+                    }
+                }
+
+                textarea {
+                    height: 26rem;
+                    font-family: 'Roboto Condensed', sans-serif;
+                    font-size: 1.5rem;
+                    line-height: 2rem;
+                    padding: 1rem;
+                    border: 5px solid transparent;
+                    border-radius: 1.5rem;
+                    resize: none;
 
                     &:focus {
                         outline: none;
