--- a/source/Application/wwwroot/css/main.css
+++ b/source/Application/wwwroot/css/main.css
@@ -84,6 +84,11 @@ main {
         font-size: 1.75rem;
         font-style: italic;
         line-height: 2.5rem; }
+      main .content article h4 {
+        font-size: 1rem;
+        font-style: italic;
+        font-weight: normal;
+        line-height: 1.5rem; }
       main .content article .article-preview {
         font-size: 1.5rem;
         line-height: 2.5rem; }
