--- a/source/Application/wwwroot/css/main.scss
+++ b/source/Application/wwwroot/css/main.scss
@@ -117,6 +117,13 @@ main {
                 line-height: 2.5rem;
             }
 
+            h4 {
+                font-size: 1rem;
+                font-style: italic;
+                font-weight: normal;
+                line-height: 1.5rem;
+            }
+
             .article-preview {
                 font-size: 1.5rem;
                 line-height: 2.5rem;
