--- a/source/Application/Views/Home/index.cshtml
+++ b/source/Application/Views/Home/index.cshtml
@@ -11,7 +11,7 @@
 @foreach (Log log in Model.OrderByDescending(l => l.CreatedDate).Take(10))
 {
     <article>
-        <h1><a href="/@log.EncodedTitle">@log.Title</a></h1>
+        <h1><a href="/article/@log.EncodedTitle">@log.Title</a></h1>
         <h2>@log.CreatedDate.Encode()</h2>
         <div class="article-preview">
             @if (log.Body.Length >= 1000)
