--- a/source/Application/wwwroot/css/main.scss
+++ b/source/Application/wwwroot/css/main.scss
@@ -54,7 +54,7 @@ main {
     nav {
         width: 25%;
 
-        a {
+        .nav-link {
             display: block;
             width: clamp(14ch, 80%, 24ch);
             height: clamp(1rem, 4vh, 3.5rem);
@@ -69,6 +69,10 @@ main {
             text-align: center;
             background-color: $accent-color-100;
             border-radius: 1.875rem;
+
+            &.active-link {
+                background-color: $accent-color-200;
+            }
 
             &:hover {
                 background-color: $accent-color-200;
@@ -259,14 +263,17 @@ main {
 }
 
 ::-webkit-scrollbar {
-    width: 10px;
+    width: 10px;    
 }
 
 ::-webkit-scrollbar-track {
     background-color: $accent-color-100;
-    border-color: #000000;
+    border-color: transparent;
     border-width: 0px 4px 0px 4px;
     border-style: solid;
+    background-clip: padding-box;
+    margin-top: 15px;
+    margin-bottom: 15px;
 }
 
 ::-webkit-scrollbar-thumb {
