--- a/source/Application/Views/Home/post.cshtml
+++ b/source/Application/Views/Home/post.cshtml
@@ -2,7 +2,16 @@
 @{ }
 
 <article>
-    <h1><a href="/edit/@Model.EncodedTitle">@Model.Title</a></h1>
+    <h1>
+    @if (User.IsInRole("Administrator"))
+    {
+        <a href="/edit/@Model.EncodedTitle">@Model.Title</a>
+    }
+    else
+    {
+        @Model.Title
+    }
+    </h1>
     <h2>@Model.CreatedDate.Encode()</h2>
     <div class="article-preview"> @MarkdownService.ParseHtml(Model.Body)</div>
     @if(Model.ModifiedDate != DateTime.MinValue)
