Added Delete action

--- a/source/Application/Views/Home/edit.cshtml
+++ b/source/Application/Views/Home/edit.cshtml
@@ -27,5 +27,8 @@
         <textarea asp-for="Body"></textarea>
         <span asp-validation-for="Body"></span>
     </div>
-    <input type="submit" value="Post" />
+    <div class="form-buttons">
+        <input type="submit" value="Post" />
+        <a href="/delete/@Model.Id">Delete</a>
+    </div>    
 </form>
