--- a/source/Application/wwwroot/css/main.css
+++ b/source/Application/wwwroot/css/main.css
@@ -169,9 +169,12 @@ main {
           main .content #createLog .form-group textarea:focus {
             outline: none;
             border: 5px solid #3d99f5; }
+      main .content #createLog .form-buttons {
+        display: flex;
+        flex-direction: row; }
       main .content #createLog input[type=submit] {
         display: block;
-        width: 50%;
+        width: 40%;
         height: 2.5rem;
         margin: 0 auto;
         font-size: 1.5rem;
@@ -185,6 +188,26 @@ main {
         text-decoration: none;
         cursor: pointer; }
         main .content #createLog input[type=submit]:hover {
+          background-color: #ffb300; }
+      main .content #createLog a {
+        display: block;
+        width: 40%;
+        height: 2.5rem;
+        margin: 0 auto;
+        font-size: 1.5rem;
+        font-family: 'Roboto Condensed', sans-serif;
+        font-weight: bold;
+        text-decoration: none;
+        color: #000000;
+        text-align: center;
+        line-height: 2.5rem;
+        background-color: #838996;
+        text-transform: uppercase;
+        border: none;
+        border-radius: 1.25rem;
+        text-decoration: none;
+        cursor: pointer; }
+        main .content #createLog a:hover {
           background-color: #ffb300; }
 
 ::-webkit-scrollbar {
