--- a/source/Application/wwwroot/css/main.scss
+++ b/source/Application/wwwroot/css/main.scss
@@ -238,14 +238,43 @@ main {
                 }
             }
 
+            .form-buttons {
+                display: flex;
+                flex-direction: row;
+            }
+
             input[type=submit] {
                 display: block;
-                width: 50%;
+                width: 40%;
                 height: 2.5rem;
                 margin: 0 auto;
                 font-size: 1.5rem;
                 font-family: 'Roboto Condensed', sans-serif;
                 font-weight: bold;
+                line-height: 2.5rem;
+                background-color: $accent-color-100;
+                text-transform: uppercase;
+                border: none;
+                border-radius: 1.25rem;
+                text-decoration: none;
+                cursor: pointer;
+
+                &:hover {
+                    background-color: $accent-color-200;
+                }
+            }
+
+            a {
+                display: block;
+                width: 40%;
+                height: 2.5rem;
+                margin: 0 auto;
+                font-size: 1.5rem;
+                font-family: 'Roboto Condensed', sans-serif;
+                font-weight: bold;
+                text-decoration: none;
+                color: #000000;
+                text-align: center;
                 line-height: 2.5rem;
                 background-color: $accent-color-100;
                 text-transform: uppercase;
