--- a/source/Application/wwwroot/css/main.scss
+++ b/source/Application/wwwroot/css/main.scss
@@ -128,6 +128,10 @@ main {
                 line-height: 2.5rem;
             }
 
+            p {
+                margin-bottom: 0.5rem;
+            }
+
             .article-preview {
                 font-size: 1.5rem;
                 line-height: 2.5rem;
