--- a/source/Application/wwwroot/css/main.css
+++ b/source/Application/wwwroot/css/main.css
@@ -90,9 +90,10 @@ main {
         font-size: 1.75rem;
         font-style: italic;
         font-weight: normal;
-        line-height: 2.5rem; }
+        line-height: 3.5rem;
+        text-align: center; }
       main .content article p {
-        margin-bottom: 0.5rem; }
+        margin-bottom: 1rem; }
       main .content article .article-preview {
         font-size: 1.5rem;
         line-height: 2.5rem; }
