--- a/source/Application/wwwroot/css/main.scss
+++ b/source/Application/wwwroot/css/main.scss
@@ -125,11 +125,12 @@ main {
                 font-size: 1.75rem;
                 font-style: italic;
                 font-weight: normal;
-                line-height: 2.5rem;
+                line-height: 3.5rem;
+                text-align: center;
             }
 
             p {
-                margin-bottom: 0.5rem;
+                margin-bottom: 1rem;
             }
 
             .article-preview {
